# instant-haskell

./: Makefile  README  README.md  calc-compiler.cabal
src/: Analyser.hs  Ast.hs  JVMTranslator.hs  LLVMTranslator.hs  Main.hs  MainBase.hs  MainJVM.hs  MainLLVM.hs  Parser.hs  TranslatorBase.hs  parser.hs
src/scripts/: insc_llvm.sh
