name:                calc-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Day1721/calc-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Marek Puzyna
maintainer:          puzynamarek97@gmail.com
copyright:           2018 Marek Puzyna
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable calc-compiler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       megaparsec >= 6.5.0 && < 7,
                       parser-combinators >= 1 && < 1.1
